--- a/h/index.html
+++ b/h/index.html
@@ -170,7 +170,7 @@
                                 <input name="message" type="hidden" value="0">
                                 <input name="time" class="registration__time" type="hidden" value="0">
                                 <input name="partnersCode" type="hidden" value="196">
-                                <input name="campaign_id" type="hidden" value="shell_eu">
+                                <input name="campaign_id" type="hidden" value="shell_isr">
                                 <input name="affiliate_id" type="hidden" value="Igor.N.">
                                 <!---->
                                 <!---->
