--- a/h/zakaz.html
+++ b/h/zakaz.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" rel=preload />
     <img height="1" width="1" style="display:none"
         src="http://www.facebook.com/tr?id=325993659256936&ev=Lead&noscript=1" />
+        <img height="1" width="1" style="display:none"
+        src="http://www.facebook.com/tr?id=670607493945345&ev=Lead&noscript=1" />
 
 
 </head>
